--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,6 @@
 AllCops:
   TargetRubyVersion: 2.7
+  NewCops: enable
 
 Style/StringLiterals:
   Enabled: true
@@ -16,4 +17,7 @@ Style/Documentation:
   Enabled: false
 
 Metrics/MethodLength:
+  Enabled: false
+
+Metrics/AbcSize:
   Enabled: false
